feat: gemini 코멘트 적용